# circlefitting

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-package.yml
csrc/: circle_detection.cpp
source/: conf.py  index.rst
src/circle_detection/operations/: _circumferential_completeness_index.py
test/: test_circle_detection.py
